# python-project-lvl4

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: my-ci.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: create.html  delete.html  statuses.html  update.html
task_manager/: __init__.py  settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html
tasks/: forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_author.py  0003_alter_task_author.py  0004_auto_20211013_1512.py
tasks/templates/tasks/: base.html  create.html  index.html  tasks.html
users/: forms.py  tests.py  urls.py  views.py
users/templates/users/: create.html  delete.html  login.html  logout.html  update.html  users.html
