[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task manager"
authors = ["ikievite <ikievite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]
gunicorn = "pytest"
pytest-cov = "^2.12.1"
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
