[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "task manager"
authors = ["ikievite <ikievite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
gunicorn = "^20.1.0"
python-dotenv = "^0.17.1"
django-bootstrap4 = "^3.0.1"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.12.1"
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.4"
isort = "^5.9.3"
litecli = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
